Remove opacity value to fix color contrast

--- a/src/mastodon-timeline.css
+++ b/src/mastodon-timeline.css
@@ -234,7 +234,6 @@ html[data-theme="dark"] {
 /* Date */
 .toot-date {
   font-size: 0.75rem;
-  opacity: 0.5;
 }
 
 /* Loading-spinner */
